--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,4 +8,4 @@ main = "src/worker-vless.js"
 compatibility_date = "2024-04-15"
 
 [vars]
-# UUID = "example_dev_token"
+UUID = "a4a29e0c-837e-4d1b-86ba-8c50b13d509e"
